stash text edits

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -120,7 +120,7 @@ In order to flag event detections, we defined several adjustable hyperparameters
 \begin{figure}
 	\centering
 	\includegraphics[width=16cm]{../figures/__map}
-	\caption{Map of the three closest Fluxnet tower sites to the Fleurus release location. Note that BE-Lon and BE-Vie are of a similar easterly direction to the site whereas BE-Bra is of an entirely different northerly direction.}
+	\caption{Map of flux tower locations for the IRE and Fukushima case studies (left and right respectively). Note that BE-Lon and BE-Vie are of a similar easterly direction to the IRE site whereas BE-Bra is in a northerly direction. The distance between IRE and the flux tower sites are approximately 19, 95, and 105 km for the BE-Lon, BE-Bra, and BE-Vie respectively. Each of the three IRE flux tower sites are located within a crop ecosystem type. Note that the US-Wrc site would be expected to have first contact with the Fukushima atmospheric plume followed by US-Gle. The OZ-Mul site would not be expected to have been affected by the plume.}
 	\label{fig:study_site}
 \end{figure}
 
