--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -86,7 +86,7 @@ pdfauthor={Jemma Stachelek}
 \vspace{-4em}
 
 \section*{Abstract}	
-Ensuring accurate detection and attribution of abnormal releases of radioactive material is critical for protecting human health and safety. Most commonly, such detection is accomplished via active monitoring approaches involving the collection of physical samples. This is labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. As an alternative first step towards passive monitoring, we developed an approach using eddy flux tower data records to identify signals from a known abnormal release and quantify the extent to which that signal also occurs at other times in the data record. Through two case-studies, one of which targeted the Fukushima nuclear disaster and the other targeting an abnormal release event at a radioisotope production facility in Fleurus Belgium, we tested our approach and identified several potential heretofore unidentified abnormal events that were consistent with atmospheric circulation patterns and/or wind direction from known release sites.Because our approach is relatively simple and is resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration anomalies in flux tower data to ensure human health and industrial safety.
+Ensuring accurate detection and attribution of abnormal releases of radioactive material is critical for protecting human health and safety. Most commonly, such detection is accomplished via active monitoring approaches involving the collection of physical samples. This is labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. As an alternative first step towards passive monitoring, we developed an approach using eddy flux tower data records to identify signals from a known abnormal release and quantify the extent to which that signal also occurs at other times in the data record. Through two case-studies, one of which targeted the Fukushima nuclear disaster and the other targeting an abnormal release event at a radioisotope production facility in Fleurus Belgium, we tested our approach and identified several potential heretofore unidentified abnormal events that were consistent with atmospheric circulation patterns and/or wind direction from known release sites. Because our approach is relatively simple and is resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration anomalies in flux tower data to ensure human health and industrial safety.
 
 \section{Introduction}
 Detecting abnormal releases of radioactive material (hereafter simply “abnormal releases”) is important as a means of ensuring human health and industrial safety. The detection of such releases is typically accomplished using active approaches that require site-specific sampling or trace gas measurements \citep{loyalkaMechanicsAerosolsNuclear1983} sometimes as a part of international monitoring networks \citep[e.g.,][]{sangiorgiEuropeanRadiologicalData2020}. A potential shortcoming of these active monitoring approaches is that they require collection of physical samples (particulates, gasses, and other signal carriers) to retrospectively determine the nature of the release and the events that may have led up to it. Active monitoring with such means is thus labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. 
@@ -104,7 +104,7 @@ We specifically focused on short-term responses of vegetation (on the order of d
 
 For the IRE case study, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie respectively.
 
-For the Fukushima case study, due to the direction of the plume, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). For contrast to the Northern Hemisphere sites where we expect a higher likelihood of impact, we also gathered measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
+For the Fukushima case study, due to the direction of the plume, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). To increase confidence that we are seeing a real effect, we contrasted the results from Northern Hemisphere sites, where we expect a higher likelihood of impact, to measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
 
 \subsection{Modeling Approach}
 We processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD > 100 µmol m-2 s-1) or net solar radiation (netrad > 0 W/m2) and 2) defining an “event period” following the publicly released date of the abnormal release. We focused on the following variables as potentially containing a signature of the release : carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. Additionally, we used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. Each of these variables were recorded by the flux tower instrumentation at a 30 minute (min) interval barring any gaps due to missing data.
