--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -185,7 +185,7 @@ Another contributor to the success of our approach was the fact that Belgium has
 
 The biggest improvements to our approach would likely come from coupling our data mining procedure with rigorous air pollutant dispersion modeling \cite[e.g.,][]{meszarosPredictabilityDispersionFukushimaderived2016}. This would eliminate the need for indirect estimation of material transport via uncertainty analyses and instead use simulation results to analytically determine the likely arrival and duration of material deposition. Further improvements could be made by incorporating knowledge about the composition of materials being deposited \citep{international2006iaea, meszarosPredictabilityDispersionFukushimaderived2016} and/or the interactions between material exposure and other environmental stressors \citep{mousseauPlantsLightIonizing2020}, which likely affects the severity and timing of ecosystem responses and by extension the fluxes being measured by a given tower. Such information may help disentangle potential interference of atmospheric contaminants with infrared measurement of $CO_2$ from declines in photosynthetic $CO_2$ uptake of contaminated vegetation given our observation that during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature. Although the chemical makeup of possible atmospheric contaminants is unknown, interference by iodine itself is unlikely to affect measurements of $CO_2$ given that the absorption spectra of iodine peaks at much shorter wavelengths around 10-7 m \citep{haynes2016crc} compared to that of $CO_2$ which peaks around 1700-2100 10-9 m (LICOR Biosciences Inc., Lincoln, NE).
 
-The fact that we were able to identify a known release (along with potential unidentified abnormal events) in the data record despite not having a detailed radiological or atmospheric transport model is a strength of our approach. Furthermore, our approach is not limited to a radiological context, any abnormal event that affects the plant community and is reflected in flux tower data is a potential target. Because our approach is light-weight and resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration impacts to the plant community within flux tower footprints to ensure human health and industrial safety.
+The fact that we were able to identify known releases (along with potential unidentified abnormal events) in the data record from both a large event (i.e. Fukushima) as well as a smaller event despite not having a detailed radiological or atmospheric transport model is a strength of our approach. Furthermore, our approach is not limited to a radiological context, any abnormal event that affects the plant community and is reflected in flux tower data is a potential target. Because our approach is light-weight and resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration impacts to the plant community within flux tower footprints to ensure human health and industrial safety.
 
 % \section{Data Availability Statement}
 
