--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -91,18 +91,18 @@ Ensuring accurate detection and attribution of abnormal releases of radioactive 
 \section{Introduction}
 Detecting abnormal releases of radioactive material (hereafter simply “abnormal releases”) is important as a means of ensuring human health and industrial safety. The detection of such releases is typically accomplished using active approaches that require site-specific sampling or trace gas measurements \citep{loyalkaMechanicsAerosolsNuclear1983} sometimes as a part of international monitoring networks \citep[e.g.,][]{sangiorgiEuropeanRadiologicalData2020}. A potential shortcoming of these active monitoring approaches is that they require collection of physical samples (particulates, gasses, and other signal carriers) to retrospectively determine the nature of the release and the events that may have led up to it. Active monitoring with such means is thus labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. 
 
-A potential alternative to active monitoring is passive monitoring \citep[e.g., the German Integrated Measuring and Information system and the International Monitoring System,][]{bieringerMonitoringGroundlevelAir2004}. Although existing wide area monitoring systems are already critical components of abnormal release detection and tracking programs \citep{mediciIMSRadionuclideNetwork2001}, diversification-of-approach may increase the programs' sensitivity and comprehensiveness. With a greater diversity of methods, monitoring programs may be able to detect a wider array of constituents with differing characteristics or expand their geographic extent without the need to deploy new instrumentation. In the present study, we developed a novel passive monitoring approach to supplement existing programs that involves the use of eddy covariance data to capture a signal from known abnormal releases. This signal is then used to investigate whether additional potential abnormal releases exist at other times in the data record. We focused on eddy flux towers, as they have to potential to provide abnormal release signatures, are globally distributed, have been in near continuous operation for several decades, and can be relatively cheaply and easily deployed in locations of interest. Therefore, they constitute a rich target for data mining approaches aimed at identifying signatures resulting from direct interference of radioactive material with target measurements and/or the indirect signal of vegetation responses to the deposition of radioactive material.
+A potential alternative to active monitoring is passive monitoring \citep[e.g., the German Integrated Measuring and Information system and the International Monitoring System,][]{bieringerMonitoringGroundlevelAir2004}. Although existing wide area monitoring systems are already critical components of abnormal release detection and tracking programs \citep{mediciIMSRadionuclideNetwork2001}, diversification-of-approach may increase the programs' sensitivity and comprehensiveness. With a greater diversity of methods, monitoring programs may be able to detect a wider array of constituents with differing characteristics or expand their geographic extent without the need to deploy new instrumentation. In the present study, we developed a novel passive monitoring approach to supplement existing programs that involves the use of eddy covariance data to capture a signal from known abnormal releases. This signal is then used to investigate whether additional potential abnormal releases exist at other times in the data record. We focused on eddy flux towers, as they have the potential to provide abnormal release signatures, are globally distributed, have been in near continuous operation for several decades, and can be relatively cheaply and easily deployed in locations of interest. Therefore, they constitute a rich target for data mining approaches aimed at identifying signatures resulting from direct interference of radioactive material with target measurements and/or the indirect signal of vegetation responses to the deposition of radioactive material.
 
 Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
 
-We specifically focused on short-term responses of vegetation (on the order of days to weeks) to potential deposition of radioactive material rather than chronic long-term signals (on the order of years to decades). In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq 131I \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals influx tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other nearby eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, we expect that exposure may cause declines in photosynthetic $CO_2$ uptake. This may be expressed as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
+We specifically focused on short-term responses of vegetation (on the order of days to weeks) to potential deposition of radioactive material rather than chronic long-term signals (on the order of years to decades). In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq 131I \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other nearby eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, we expect that exposure may cause declines in photosynthetic $CO_2$ uptake. This may be expressed as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
 
 
 \section{Methods}
 
 \subsection{Data Description}
 
-For the IRE case study, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie respectively.
+For the IRE case study, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1A). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie respectively.
 
 For the Fukushima case study, due to the direction of the plume, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). To increase confidence that we are seeing a real effect, we contrasted the results from Northern Hemisphere sites, where we expect a higher likelihood of impact, to measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
 
@@ -136,7 +136,7 @@ For the Fukushima case study, our objective was to test the sensitivity of our a
 
 \begin{table}[]
 	\centering
-	\caption{Overview of $CO_2$ vs air temperature interaction models at the IRE site. $R^2$ is the coefficient of determination of a linear model fit to the two covariates for the period of the abnormal release event (corresponding to “during” in Fig. 2). Effect is the event effect size of the interaction term 'during' the known release period matching the quantile of the distribution as specified by event quantile effect hyperparameter. Wind (t\%) is the average percentage of time that wind direction was from the site of known release towards the selected flux tower during the known release event. The remaining columns indicate the base-case hyperparameter settings.}
+	\caption{Overview of $CO_2$ vs air temperature interaction models at the IRE site. $R^2$ is the coefficient of determination of a linear model fit to the two covariates for the period of the abnormal release event (corresponding to “during” in Fig. 2). Effect is the event effect size of the interaction term 'during' the known release period matching the quantile of the distribution as specified by event quantile effect hyperparameter. Wind (\%) is the average percentage of time that wind direction was from the site of known release towards the selected flux tower during the known release event. The remaining columns indicate the base-case hyperparameter settings.}
 	\begin{tabular}{@{}lllllll@{}}
 	\toprule
 	Site & $R^2$ & Effect & Wind(\%) & Days(n) & Wind(tol) & Effect(q) \\ \midrule
@@ -177,15 +177,15 @@ For the Fukushima case study, our objective was to test the sensitivity of our a
 \end{figure}
 
 \section{Discussion}
-Using flux tower records collected closest to the IRE release location, our event detection algorithm was able to identify both a known abnormal release and plausible previously unidentified abnormal events. There was a broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these events. This suggests that, at the very least, given a facility known to have a prior abnormal event, flux tower networks are capable of providing a means of passive monitoring to detect subsequent events as well as information on the environmental conditions before, during, and after the event. Furthermore, our approach has promise for situations when there is not a prior known abnormal release. In these cases, it may be possible to continuously mine flux tower records (as they become available) for events that exceed some threshold identified in a more comprehensive cross-site, cross-event benchmarking study.
+Using flux tower records collected closest to and in the prevailing wind direction to the IRE and the Fukushima release locations, our event detection algorithm was able to identify both known abnormal releases and plausible previously unidentified abnormal events. There was broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these releases, and our approach was supported by the loss of signal at flux towers outside of the prevailing wind direction. This suggests that, at the very least, given a facility known to have a prior abnormal release, flux tower networks are capable of providing a means of passive monitoring to detect subsequent events as well as information on the environmental conditions before, during, and after the event. Furthermore, our approach has promise for situations when there is not a prior known abnormal release. In these cases, it may be possible to continuously mine flux tower records (as they become available) for events that exceed some threshold identified in a more comprehensive cross-site, cross-event benchmarking study.
 
 More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. Our approach was aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. The ability of our approach to identify a suitable release signature does likely depend on the quality and completeness of the underlying data.
 
-Another contributor to the success of our approach was the fact that Belgium has a relatively dense network of flux towers with long data records. As a result, we were able to compare event detections at the closest tower against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural ecosystem types. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types could differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions \citep[e.g., wind speed and direction,][]{chuRepresentativenessEddyCovarianceFlux2021}. Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes \citep[e.g.][]{pastorello2020fluxnet2015}, we suspect that having all the towers in our study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
+Another contributor to the success of our approach was our ability to compare event detections at  close towers in prevailing wind directions against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. The relatively dense networks of flux towers with long data records leveraged in both locations also aided these case studies. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach, although installation and maintenance of new flux towers in locations of interest may be cost effective compared to other monitoring approaches. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural and forested ecosystem types for the IRE and Fukushima case studies respectively. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types could differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions \citep[e.g., wind speed and direction,][]{chuRepresentativenessEddyCovarianceFlux2021}. Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes \citep[e.g.][]{pastorello2020fluxnet2015}, we suspect that having all the towers in the IRE case study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
 
 The biggest improvements to our approach would likely come from coupling our data mining procedure with rigorous air pollutant dispersion modeling \cite[e.g.,][]{meszarosPredictabilityDispersionFukushimaderived2016}. This would eliminate the need for indirect estimation of material transport via uncertainty analyses and instead use simulation results to analytically determine the likely arrival and duration of material deposition. Further improvements could be made by incorporating knowledge about the composition of materials being deposited \citep{international2006iaea, meszarosPredictabilityDispersionFukushimaderived2016} and/or the interactions between material exposure and other environmental stressors \citep{mousseauPlantsLightIonizing2020}, which likely affects the severity and timing of ecosystem responses and by extension the fluxes being measured by a given tower. Such information may help disentangle potential interference of atmospheric contaminants with infrared measurement of $CO_2$ from declines in photosynthetic $CO_2$ uptake of contaminated vegetation given our observation that during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature. Although the chemical makeup of possible atmospheric contaminants is unknown, interference by iodine itself is unlikely to affect measurements of $CO_2$ given that the absorption spectra of iodine peaks at much shorter wavelengths around 10-7 m \citep{haynes2016crc} compared to that of $CO_2$ which peaks around 1700-2100 10-9 m (LICOR Biosciences Inc., Lincoln, NE).
 
-The fact that we were able to identify known releases (along with potential unidentified abnormal events) in the data record from both a large event (i.e. Fukushima) as well as a smaller event despite not having a detailed radiological or atmospheric transport model is a strength of our approach. Furthermore, our approach is not limited to a radiological context, any abnormal event that affects the plant community and is reflected in flux tower data is a potential target. Because our approach is light-weight and resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration impacts to the plant community within flux tower footprints to ensure human health and industrial safety.
+The fact that we were able to identify known releases (along with potential unidentified abnormal events) in the data records from both a large event (i.e. Fukushima) as well as a smaller event despite not having a detailed radiological or atmospheric transport model is a strength of our approach. Furthermore, our approach is not limited to a radiological context, any abnormal event that affects the plant community and is reflected in flux tower data is a potential target. Because our approach is light-weight and resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration impacts to the plant community within flux tower footprints to ensure human health and industrial safety.
 
 % \section{Data Availability Statement}
 
