no plans to release data

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -189,7 +189,7 @@ The fact that we were able to identify known releases (along with potential unid
 
 % \section{Data Availability Statement}
 
-% All data and code associated with this manuscript will be made available by the time of publication (or earlier pending the conclusion of US Department of Energy approvals) with a Zenodo DOI at: \href{https://doi.org}{https://doi.org}
+% All code associated with this manuscript will be made available by the time of publication (or earlier pending the conclusion of US Department of Energy approvals) with a Zenodo DOI at: \href{https://doi.org}{https://doi.org}
 
 \section{Acknowledgements}
 
