espr submission edits

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -67,7 +67,7 @@
 
 % Uncomment to override  the `A preprint' in the header
 \renewcommand{\headeright}{\href{https://doi.org/}{DOI: 10.000/XXXXX}}
-\renewcommand{\undertitle}{This is a draft of a Manuscript in preparation for publication in Nature: Communications \\ \href{https://doi.org/10.1000/XXXXX}{DOI: 10.1000/XXXXX}}
+\renewcommand{\undertitle}{This is a draft of a Manuscript intended for Environmental Science and Pollution Research \\ \href{https://doi.org/10.1000/XXXXX}{DOI: 10.1000/XXXXX}}
 \renewcommand{\shorttitle}{Eddy covariance towers as sentinels}
 
 %%% Add PDF metadata to help others organize their library
@@ -83,10 +83,12 @@ pdfauthor={Jemma Stachelek}
 \maketitle
 \doublespacing
 
-\vspace{-4em}
+\vspace{-5em}
 
 \section*{Abstract}	
 Ensuring accurate detection and attribution of abnormal releases of radioactive material is critical for protecting human health and safety. Most commonly, such detection is accomplished via active monitoring approaches involving the collection of physical samples. This is labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. As an alternative first step towards passive monitoring, we developed an approach using eddy flux tower data records to identify signals from a known abnormal release and quantify the extent to which that signal also occurs at other times in the data record. Through two case-studies, one of which targeted the Fukushima nuclear disaster and the other targeting an abnormal release event at a radioisotope production facility in Fleurus Belgium, we tested our approach and identified several potential heretofore unidentified abnormal events that were consistent with atmospheric circulation patterns and/or wind direction from known release sites. Because our approach is relatively simple and is resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration anomalies in flux tower data to ensure human health and industrial safety.
+
+\textbf{Keywords:} eddy covariance, data mining, industrial safety, vegetation response, radioactivity, photosynthesis
 
 \section{Introduction}
 Detecting abnormal releases of radioactive material (hereafter simply “abnormal releases”) is important as a means of ensuring human health and industrial safety. The detection of such releases is typically accomplished using active approaches that require site-specific sampling or trace gas measurements \citep{loyalkaMechanicsAerosolsNuclear1983} sometimes as a part of international monitoring networks \citep[e.g.,][]{sangiorgiEuropeanRadiologicalData2020}. A potential shortcoming of these active monitoring approaches is that they require collection of physical samples (particulates, gasses, and other signal carriers) to retrospectively determine the nature of the release and the events that may have led up to it. Active monitoring with such means is thus labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. 
@@ -191,11 +193,21 @@ The fact that we were able to identify known releases (along with potential unid
 
 % All code associated with this manuscript will be made available by the time of publication (or earlier pending the conclusion of US Department of Energy approvals) with a Zenodo DOI at: \href{https://doi.org}{https://doi.org}
 
-\section{Acknowledgements}
-
-JS built models, analyzed data, and wrote the paper. SS, LTD, and AJ contributed to the conception of the manuscript. ECT, VAK, LTD, and EC edited the manuscript. All authors provided interpretation of results. We acknowledge funding for supporting AmeriFlux data portal: U.S. Department of Energy Office of Science. The data used in this activity has been also funded by CarboEuropeIP (EU-FP6), IMECC (EU-FP6). This work was supported by Los Alamos National Laboratory (LDRD-20220062ER).
-
 \bibliographystyle{jsta}
 \bibliography{fluxnet}
+
+\section*{Statements and Declarations}
+
+\subsection*{Funding}
+
+We acknowledge funding for supporting the AmeriFlux data portal: U.S. Department of Energy Office of Science. The data used in this activity has been also funded by CarboEuropeIP (EU-FP6), IMECC (EU-FP6). This work was supported by Los Alamos National Laboratory (LDRD-20220062ER).
+
+\subsection*{Competing Interests}
+
+The authors have no relevant financial or non-financial interests to disclose.
+
+\subsection*{Author Contributions}
+
+JS built models, analyzed data, and wrote the paper. SS, LTD, and AJ contributed to the conception of the manuscript. ECT, VAK, LTD, and EC edited the manuscript. All authors provided interpretation of results. 
 
 \end{document}
