espr submission re-edits

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -25,7 +25,7 @@
 \date{} 					% Or removing it
 
 \author{
-	\href{https://orcid.org/0000-0002-5924-2464}{\includegraphics[scale=0.06]{orcid.pdf}\hspace{1mm}Jemma Stachelek$^1$} \\
+	\href{https://orcid.org/0000-0002-5924-2464}{\includegraphics[scale=0.06]{orcid.pdf}\hspace{1mm}Corresponding Author: Jemma Stachelek$^1$} \\
 	$^1$ High Performance Computing Division\\
 	Los Alamos National Laboratory\\
 	Los Alamos, NM, USA, 87544 \\
@@ -208,6 +208,23 @@ The authors have no relevant financial or non-financial interests to disclose.
 
 \subsection*{Author Contributions}
 
-JS built models, analyzed data, and wrote the paper. SS, LTD, and AJ contributed to the conception of the manuscript. ECT, VAK, LTD, and EC edited the manuscript. All authors provided interpretation of results. 
+JS built models, analyzed data, and wrote the paper. SS, LTD, and AJ contributed to the conception of the manuscript. ECT, VAK, LTD, and EC edited the manuscript. All authors provided interpretation of results.
+
+\subsection*{Ethical Approval}
+
+Not applicable
+
+\subsection*{Consent to Participate}
+
+Not applicable
+
+\subsection*{Consent to Publish}
+
+Not applicable
+
+\subsection*{Availability of Data and Materials}
+
+No new data was produced in this study. All data used is available publicly from their respective sources and archived permanently with digital object identifiers.
+
 
 \end{document}
