battle latex submission

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -36,12 +36,12 @@
 	Los Alamos National Laboratory\\
 	Los Alamos, NM, USA, 87544 \\
 	\And
-	E. Christi Thompson$^3$ \\
+	Elizabeth Christi Thompson$^3$ \\
 	$^3$ Computer, Computational, and Statistical Sciences Division\\
 	Los Alamos National Laboratory\\
 	Los Alamos, NM, USA, 87544 \\
 	\And
-	\textbf{L. Turin Dickman}$^2$ \\
+	\textbf{Lee Turin Dickman}$^2$ \\
 	$^2$ Earth and Environmental Sciences Division\\
 	Los Alamos National Laboratory\\
 	Los Alamos, NM, USA, 87544 \\
@@ -121,7 +121,7 @@ In order to flag event detections, we defined several adjustable hyperparameters
 
 \begin{figure}
 	\centering
-	\includegraphics[width=16cm]{../figures/__map}
+	\includegraphics[width=16cm]{__map}
 	\caption{Map of flux tower locations for the IRE and Fukushima case studies (left and right respectively). Note that BE-Lon and BE-Vie are of a similar easterly direction to the IRE site whereas BE-Bra is in a northerly direction. The distance between IRE and the flux tower sites are approximately 19, 95, and 105 km for the BE-Lon, BE-Bra, and BE-Vie respectively. Each of the three IRE flux tower sites are located within a crop ecosystem type. Note that the US-Wrc site would be expected to have first contact with the Fukushima atmospheric plume followed by US-Gle. The OZ-Mul site would not be expected to have been affected by the plume.}
 	\label{fig:study_site}
 \end{figure}
@@ -151,7 +151,7 @@ For the Fukushima case study, our objective was to test the sensitivity of our a
 
 \begin{figure}
 	\centering
-	\includegraphics[width=11cm]{../figures/__interaction_belon}
+	\includegraphics[width=11cm]{__interaction_belon}
 	\caption{Interaction plots at the BE-Lon site between air temperature ($C^{\circ}$) and $CO_2$ (ppm) for the period of the known abnormal release (A) and an arbitrary non-release period (B). Also shown is the distribution of all interaction effect sizes (gray) compared with the effect size of the time period shown in the corresponding left panels (orange, C, D).}
 	\label{fig:interaction}
 \end{figure}
@@ -159,21 +159,21 @@ For the Fukushima case study, our objective was to test the sensitivity of our a
 
 \begin{figure}
 	\centering
-	\includegraphics[width=16cm]{../figures/__rolling_fleurus}
+	\includegraphics[width=16cm]{__rolling_fleurus}
 	\caption{Time series plots (2004-2013) of rolling event detection analysis at the IRE site for the $CO_2$ and air temperature ($C^{\circ}$) variable pair. Event detection lines (orange), interaction effect size (blue), and event effect size (dashed black line) are shown in the top panels. The fraction of time that the wind direction was towards the particular tower (solid black) are shown in the corresponding bottom panels.}
 	\label{fig:rolling}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\includegraphics[width=16cm]{../figures/__hyperparameter_experiment}
+	\includegraphics[width=16cm]{__hyperparameter_experiment}
 	\caption{Sensitivity of event detection at the IRE site to different hyperparameter values (points) alongside potential relationship (solid line) and confidence interval (shaded region).}
 	\label{fig:hyperparameter}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\includegraphics[width=16cm]{../figures/__rolling_fukushima}
+	\includegraphics[width=16cm]{__rolling_fukushima}
 	\caption{Time series plots (2010-2013) of rolling event detection analysis for the Fukushima disaster case study. The depicted variable pair is latent heat and relative humidity. Event detection lines (orange), interaction effect size (blue), and event effect size (dashed black line) are shown in the top panels. The fraction of time that the wind direction was towards the particular tower (solid black) are shown in the corresponding bottom panels.}
 	\label{fig:fukushima}
 \end{figure}
@@ -224,7 +224,9 @@ Not applicable
 
 \subsection*{Availability of Data and Materials}
 
-No new data was produced in this study. All data used is available publicly from their respective sources and archived permanently with digital object identifiers.
+No new data was produced in this study. All original data used is available publicly from their respective sources and archived permanently with restrictions on redistribution. These can be found at \url{http://www.europe-fluxdata.eu/}, \url{https://fluxnet.org/}, and \citep{cleverly2011alice}.
+
+Release of computer code and secondary data reuse that supports the results and analyses of the paper are pending a United State Department of Energy Review pursuant to \url{https://www.osti.gov/doecode/FAQs#how-do-i-announce-software-with-an-access-limitation-to-osti}.
 
 
 \end{document}
