super/sub script fixes

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -97,7 +97,7 @@ A potential alternative to active monitoring is passive monitoring \citep[e.g., 
 
 Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
 
-We specifically focused on short-term anomalies in the vegetation response data (on the order of days to weeks) due to either potential deposition of radioactive material or direct sensor effects rather than chronic long-term signals on the order of years to decades. In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq 131I \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, we expect that exposure may cause declines in photosynthetic $CO_2$ uptake. This may be expressed as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
+We specifically focused on short-term anomalies in the vegetation response data (on the order of days to weeks) due to either potential deposition of radioactive material or direct sensor effects rather than chronic long-term signals on the order of years to decades. In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq $^{131}I$ \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, we expect that exposure may cause declines in photosynthetic $CO_2$ uptake. This may be expressed as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
 
 
 \section{Methods}
@@ -109,7 +109,7 @@ For the IRE case study, we gathered measurements from eddy covariance platforms 
 For the Fukushima case study, due to the direction of the plume, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). To increase confidence that we are seeing a real effect, we contrasted the results from Northern Hemisphere sites, where we expect a higher likelihood of impact, to measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
 
 \subsection{Modeling Approach}
-We processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD > 100 µmol m-2 s-1) or net solar radiation (netrad > 0 W/m2) and 2) defining an “event period” following the publicly released date of the abnormal release. We focused on the following variables as potentially containing a signature of the release : carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. Additionally, we used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. Each of these variables were recorded by the flux tower instrumentation at a 30 minute (min) interval barring any gaps due to missing data.
+We processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD > 100 µmol m-2 s-1) or net solar radiation (netrad > 0 $W/m^2$) and 2) defining an “event period” following the publicly released date of the abnormal release. We focused on the following variables as potentially containing a signature of the release : carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. Additionally, we used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. Each of these variables were recorded by the flux tower instrumentation at a 30 minute (min) interval barring any gaps due to missing data.
 
 To begin our analysis, we screened all pairwise, linear relationships between the aforementioned independent and dependent variables using a linear regression fit between each pair for the entire period of record (n=51). Variable pairs were excluded from further analysis if the overall coefficient of determination ($R^2$) was less than 0.1. This low threshold was chosen to maximize the number of pairs that could potentially be investigated more deeply. From visual inspection, we determined that many of the rejected variable pairs appeared to have a nonlinear relationship. As our aim was to develop a methodology that could be applied broadly to other sites, we did not apply transformation to linearize these relationships without a physical justification for the transformation. Evaluating an exhaustive list of data transformations was beyond the scope of the present effort. After identification of candidate variable pairs, we fit an interaction model of the following form where Y represents a continuous response (e.g., $CO_2$, latent heat, etc.), $X_1$ is an independent variable (e.g., air temperature, humidity, etc.), $W_2$ is a categorical variable representing the “period” of observation (i.e., during, before, or after, the event), $\beta$0 is the intercept, $\beta$1,2 are slope parameters for $X_1$ and $W_2$ respectively, and $\beta$3 is the slope parameter for the interaction between $X_1$ and $W_2$:
 
@@ -128,7 +128,7 @@ In order to flag event detections, we defined several adjustable hyperparameters
 
 \section{Results}
 
-For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05) and a strong event effect size (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between CO2 and air temperature become less negative than before the event, with lower than expected CO2 at low air temperature (Figure 2A).
+For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05) and a strong event effect size (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature (Figure 2A).
 
 Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, whereby it was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower (using the default base case wind tolerance of 10 deg) which was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
 
